--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-    "name": "template-vite-ts",
-    "description": "A Phaser 3 TypeScript template using Vite.",
-    "version": "1.3.0",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/phaserjs/template-vite-ts.git"
-    },
-    "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
-    "license": "MIT",
-    "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-    "bugs": {
-        "url": "https://github.com/phaserjs/template-vite-ts/issues"
-    },
-    "homepage": "https://github.com/phaserjs/template-vite-ts#readme",
-    "scripts": {
-        "dev": "vite --config vite/config.dev.mjs",
-        "build": "vite build --config vite/config.prod.mjs"
-    },
-    "devDependencies": {
-        "@types/dat.gui": "^0.7.13",
-        "terser": "^5.31.0",
-        "typescript": "^5.4.5",
-        "vite": "^5.2.11"
-    },
-    "dependencies": {
-        "dat.gui": "^0.7.9",
-        "phaser": "^3.80.1"
-    }
+  "name": "template-vite-ts",
+  "description": "A Phaser 3 TypeScript template using Vite.",
+  "version": "1.3.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phaserjs/template-vite-ts.git"
+  },
+  "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
+  "license": "MIT",
+  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
+  "bugs": {
+    "url": "https://github.com/phaserjs/template-vite-ts/issues"
+  },
+  "homepage": "https://github.com/phaserjs/template-vite-ts#readme",
+  "scripts": {
+    "dev": "vite --config vite/config.dev.mjs",
+    "build": "vite build --config vite/config.prod.mjs",
+    "deploy": "gh-pages -d dist"
+  },
+  "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
+    "gh-pages": "^6.1.1",
+    "terser": "^5.31.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
+  },
+  "dependencies": {
+    "dat.gui": "^0.7.9",
+    "phaser": "^3.80.1"
+  }
 }
